test: add tests for testable events
Currently we test events:

- `large_heap`
- `long_message_queue`

--- a/rebar.config
+++ b/rebar.config
@@ -10,6 +10,8 @@
     {apps, [sauron]}
 ]}.
 
+{profiles, [{test, [{deps, [telemetry_registry]}]}]}.
+
 {project_plugins, [
     rebar3_ex_doc,
     rebar3_lint,
